--- a/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
+++ b/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
@@ -6,36 +6,31 @@
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of
                                         Agrapradīpa</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Agrapradīpa­dhāraṇī </title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">sgron ma mchog gi
                                         gzungs</title>
                                 <title type="mainTitle" xml:lang="bo">སྒྲོན་མ་མཆོག་གི་གཟུངས།</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Agrapradīpa­dhāraṇī </title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་རིག་སྔགས་ཀྱི་རྒྱལ་པོ་སྒྲོན་མ་མཆོག་གི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rig sngags kyi
-                                        rgyal po sgron ma mchog gi gzungs</title>
                                 <title type="longTitle" xml:lang="en">The Noble King of Spells, the
                                         Dhāraṇī of Agrapradīpa</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Āryāgrapradīpa­dhāraṇīvidyārāja</title>
-                                <title type="otherTitle" xml:lang="Sa-Ltn">Agrapradīpa­dhāraṇīvidyā</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa rig sngags kyi
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa rig sngags kyi
                                         rgyal po sgron ma mchog gi gzungs</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་རིག་སྔགས་ཀྱི་རྒྱལ་པོ་སྒྲོན་མ་མཆོག་གི་གཟུངས།</title>
+                                <title type="otherTitle" xml:lang="Sa-Ltn">Agrapradīpa­dhāraṇīvidyā</title>
                                 <author role="translatorMain" ref="eft:team-70">Translated by Julian
                                         Schott<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
-                                <author role="translatorEng" ref="eft:person-380">Julian
-                                        Schott</author>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
-                                <editor role="copyEditor" ref="eft:person-66">Joseph
-                                        McClellan</editor>
+                                <author role="translatorEng" ref="eft:person-380">Julian Schott</author>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer
-                                        Dhingra</editor>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -86,7 +81,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-08-25T13:21:28.433Z" user="admin">25/08/2022 13:21:28</note>
+                                <note type="lastUpdated" date-time="2022-11-16T09:11:09.751Z" user="admin">16/11/2022 09:11:09</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2022-01-31T10:53:56.195Z" user="line-tofte">3</note>
@@ -128,8 +123,9 @@
                                 <note type="updated" update="translation-status" value="2.a" date-time="2022-07-15T12:47:31.626Z" user="line-tofte">2.a</note>
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2022-07-15T12:47:31.626Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-08-25T13:21:20.136Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T13:21:20.136Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-08-25T13:21:20.136Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T13:21:20.136Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-16T09:11:04.181Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -387,7 +383,7 @@
                                                 the Tibetan translation of <title xml:lang="en">The
                                                   Dhāraṇī of Agrapradīpa</title> preserved in the
                                                 Tantra and Dhāraṇī sections of the Degé Kangyur<note place="end" xml:id="UT22084-088-022-129">
-                                                  <p key="toh858" tid="79">This text, Toh 858, and
+                                                  <p key="toh858">This text, Toh 858, and
                                                   all those contained in this same volume (<foreign xml:lang="Bo-Ltn">rgyud ’bum, na</foreign>), are
                                                   listed as being located in volume 100 of the Degé
                                                   Kangyur by the Buddhist Digital Resource Center
@@ -415,7 +411,7 @@
                                                   translation.</p>
                                                   <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT
                      AND REMOVE THE <p> ELEMENT-->
-                                                  <p key="toh528" tid="80">Note that there is a
+                                                  <p key="toh528">Note that there is a
                                                   discrepancy among various databases for cataloging
                                                   the Toh 858 version of this text within vol. 100
                                                   or 101 of the Degé Kangyur. See Toh 858, <ref target="https://read.84000.co/translation/toh858.html#end-note-UT22084-088-022-129">note 7</ref>, for details.</p>
@@ -450,7 +446,7 @@
                                                 <ref cRef="F.85.b" key="toh528" type="folio" xml:id="UT22084-088-022-117"/>
                         <ref cRef="F.79.b" key="toh858" type="folio" xml:id="UT22084-088-022-143"/>
                         <note place="end" xml:id="UT22084-088-022-118">
-                                                  <p key="toh528" tid="77">Two sets of folio
+                                                  <p key="toh528">Two sets of folio
                                                   references have been included in this translation
                                                   due to a discrepancy in volume 88 (<foreign xml:lang="Bo-Ltn">rgyud ’bum</foreign>, <foreign xml:lang="Bo-Ltn">na</foreign>) of the Degé
                                                   Kangyur between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and
@@ -467,7 +463,7 @@
                                                   the eKangyur viewer.</p>
                                                   <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT
                      AND REMOVE THE <p> ELEMENT-->
-                                                  <p key="toh858" tid="78">In the Toh 528 version of
+                                                  <p key="toh858">In the Toh 528 version of
                                                   the text there is a slight discrepancy in the
                                                   folio numbering between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and
                                                   the late (post <foreign xml:lang="Bo-Ltn">par
