--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -4,11 +4,11 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Questions of Rāṣṭrapāla</title>
+                <title type="mainTitle" xml:lang="en">The Questions of Rāṣṭrapāla (1)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Rāṣṭrapāla­paripṛcchā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yul ’khor skyong gis zhus pa</title>
                 <title type="mainTitle" xml:lang="bo">ཡུལ་འཁོར་སྐྱོང་གིས་ཞུས་པ།</title>
-                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Questions of Rāṣṭrapāla”</title>
+                <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Questions of Rāṣṭrapāla (1)”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­rāṣṭrapāla­paripṛcchā­nāma­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཡུལ་འཁོར་སྐྱོང་གིས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa yul ’khor skyong gis zhus pa zhes bya ba theg pa chen po’i mdo</title>
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2022</date>
+                <edition>v 1.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -67,7 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-10T13:05:38.001Z" user="admin">10/07/2022 13:05:38</note>
+                <note type="lastUpdated" date-time="2022-11-16T16:10:16.561Z" user="admin">16/11/2022 16:10:16</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T13:32:21.464Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-08-19T12:18:31.899Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-22T15:01:18.386Z" user="line-tofte">Auto
@@ -111,6 +111,7 @@
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-02-16T15:37:09.125Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.8" date-time="2022-07-10T13:05:34.121Z" user="john">Harmonization of trailer and colophon</note>
+                <note type="updated" update="text-version" value="1.0.9" date-time="2022-11-16T16:10:13.569Z" user="konchog">One small typo fixed in intro.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -137,10 +138,10 @@
                     <head type="section" tid="6">The Text</head>
                     <milestone unit="chunk" xml:id="UT22084-042-003-3"/>
                     <p tid="7">
-                        <title xml:lang="en">The Questions of Rāṣṭrapāla</title> is one of the earliest Mahāyāna sūtras and belongs to the
+                        <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title> is one of the earliest Mahāyāna sūtras and belongs to the
                         Ratnakūṭa collection of the Chinese Tripiṭaka and the Tibetan Kangyur.<note place="end" xml:id="UT22084-042-003-4"> On the
                             Ratnakūṭa, or Mahāratnakūṭasūtra, see Pedersen 1980.</note> Among the forty-nine works that constitute this collection,
-                            <title xml:lang="en">The Questions of Rāṣṭrapāla</title> is one of the few texts for which Indian originals are extant.
+                        <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title> is one of the few texts for which Indian originals are extant.
                         The earliest available complete Sanskrit text is from a Nepalese manuscript dated to 1661, which was edited by Louis Finot and
                         first published in St. Petersburg by the Académie Impériale des Sciences in 1901. The Nepalese manuscript is preserved at
                         Cambridge University. Two other similar manuscripts are held in Paris and Tokyo. In addition, no less than four copies of the
@@ -148,15 +149,15 @@
                         Preservation Project (NGMPP).<note place="end" xml:id="UT22084-042-003-5"> See Boucher 2008, xvii–xviii.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-6"/>
-                    <p tid="8">Beginning in the third century <hi rend="small-caps">ce</hi>, <title xml:lang="en">The Questions of Rāṣṭrapāla</title>
+                    <p tid="8">Beginning in the third century <hi rend="small-caps">ce</hi>, <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title>
                         was translated into Chinese at least three times. The earliest extant translation, the <title xml:lang="Zh-Ltn">Deguang taizi
                             jing</title> (<title xml:lang="zh">德光太子經</title>, Taishō 170), was prepared by Dharmarakṣa (c. 233–310) and completed in
-                        the year 270. In the late sixth century, <title xml:lang="en">The Questions of Rāṣṭrapāla</title> was translated a second time
+                        the year 270. In the late sixth century, <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title> was translated a second time
                         by Jñānagupta and Dharmagupta under the title of <title xml:lang="Zh-Ltn">Huguo pusa hui</title> (<title xml:lang="zh">護國菩薩會</title>, Taishō 310, pp. 457–78). Finally, the text was translated a third time into Chinese in 994 by Dānapāla and
                         given the title <title xml:lang="Zh-Ltn">Huguo zunzhe suowen dacheng jing</title> (<foreign xml:lang="zh" type="term">護國尊者所問大乘經</foreign>, Taishō 321).<note place="end" xml:id="UT22084-042-003-7"> See Boucher 2008, xviii–xix.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-8"/>
-                    <p tid="9">In the early ninth century <hi rend="small-caps">ce</hi>, <title xml:lang="en">The Questions of Rāṣṭrapāla</title> was
+                    <p tid="9">In the early ninth century <hi rend="small-caps">ce</hi>, <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title> was
                         translated into Tibetan by the Tibetan translator Yeshé Dé in cooperation with the Indian scholars Jinamitra, Dānaśīla, and
                         Munivarman. In the Degé Kangyur, this text comprises thirty folios. It was critically edited and compared to the Lhasa,
                         Narthang, and Peking recensions in 1952 by Jacob Ensink in the context of his study and translation of the Sanskrit text.<note place="end" xml:id="UT22084-042-003-9"> See Ensink 1952, 60–125.</note>
@@ -173,7 +174,7 @@
                     <p tid="11">For our present translation, we have relied mainly on the Tibetan translation from the early ninth-century as
                         preserved in the Degé edition, comparing it to the Peking edition whenever passages were unclear. For some passages in which
                         the Tibetan was misleading or unintelligible on its own, we relied on the Sanskrit text and marked these instances in the
-                        footnotes to our translation. In addition, we consulted Daniel Boucher’s English translation and study of <title xml:lang="en">The Questions of Rāṣṭrapāla</title>.</p>
+                        footnotes to our translation. In addition, we consulted Daniel Boucher’s English translation and study of <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title>.</p>
                 </div>
                 <div type="section" xml:id="UT22084-042-003-introduction-2">
                     <head type="section" tid="12">The Historical Background and Dating of the Text</head>
@@ -187,7 +188,7 @@
                         The later parts consist of some two hundred forty-eight verses out of a total of three hundred fifty-three, and merely a few
                         passages in prose. They are mostly located at the beginning of the text and focus on the extensive praise of the body of the
                         Buddha in verse form,<note place="end" xml:id="UT22084-042-003-16"> See Boucher 2008, 108.</note> a typical feature of later
-                        Mahāyāna discourse. This challenges the widely-held assumption that in Mahāyāna scriptures, verse tends to be older than
+                        Mahāyāna discourses. This challenges the widely-held assumption that in Mahāyāna scriptures, verse tends to be older than
                         prose.</p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-17"/>
                     <p tid="14">The earlier layer of the text is largely in prose. Only one of the tetrads praising the qualities of bodhisattvas is
@@ -240,7 +241,7 @@
                     <head type="section" tid="18">The Contents</head>
                     <milestone unit="chunk" xml:id="UT22084-042-003-30"/>
                     <p tid="19">
-                        <title xml:lang="en">The Questions of Rāṣṭrapāla</title> can be roughly divided into two sections. The first section
+                        <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title> can be roughly divided into two sections. The first section
                         mainly revolves around the Buddha addressing the questions about the nature of bodhisattva conduct posed by Rāṣṭrapāla, a
                         newly ordained monk who had joined the Buddha’s assembly in Rājagṛha on Vulture’s Peak. In the second section, the Buddha
                         proceeds to provide an illustration of exemplary conduct by recalling an episode in one his former lives, during the time of
@@ -315,7 +316,7 @@
             <div type="translation">
                 <head type="translation" tid="27"> The Translation </head>
                 <head type="titleHon" tid="28">The Noble Mahāyāna Sūtra</head>
-                <head type="titleMain" tid="29"> The Questions of Rāṣṭrapāla</head>
+                <head type="titleMain" tid="29"> The Questions of Rāṣṭrapāla (1)</head>
                 <div type="section" xml:id="UT22084-042-003-section-1">
                     <p tid="30">
                         <ref cRef="B1" type="bampo"/>
@@ -3474,11 +3475,11 @@
                         After the Bhagavān had spoken these words, the venerable Rāṣṭrapāla, as well as the world with its gods, humans, asuras, and
                         gandharvas, rejoiced and praised what the Bhagavān had said.</p>
                     <milestone unit="chunk" xml:id="UT22084-042-003-593"/>
-                    <trailer tid="471">This concludes <title xml:lang="en">The Questions of Rāṣṭrapāla</title>, the eighteenth of the one hundred 
+                    <trailer tid="471">This concludes <title xml:lang="en">The Questions of Rāṣṭrapāla (1)</title>, the eighteenth of the one hundred 
                         thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.<note place="end" xml:id="UT22084-042-003-594"> The 
                             Sanskrit differs considerably here: “Thus the exalted sūtra of olden times about the
                             noble man Puṇyaraśmi is concluded. The Mahāyāna sūtra called <title xml:lang="en">The Questions of the Noble
-                                Rāṣṭrapāla</title> is concluded” (<foreign xml:lang="Sa-Ltn" type="quote">iti puṇyaraśmeḥ satpuruṣasya
+                                Rāṣṭrapāla (1)</title> is concluded” (<foreign xml:lang="Sa-Ltn" type="quote">iti puṇyaraśmeḥ satpuruṣasya
                                 pūrva­yoga­sūtra­ratna­rājaṃ samāptam // ārya­rāṣṭra­pāla­paripṛcchā nāma mahāyāna­sūtraṃ samāptam
                             //</foreign>).</note>
                     </trailer>
@@ -3588,7 +3589,7 @@
                             <term xml:lang="bo">ཕུང་པོ།</term>
                             <term xml:lang="Sa-Ltn">skandha</term>
                             <term type="definition">The five aggregates (Skt. <foreign xml:lang="Sa-Ltn" type="term">skandha</foreign>) of form,
-                                feeling, perception, formative predispositions, and consciousness. On the individual level, the five aggregates refer
+                                feeling, perception, formative predispositions, and consciousness. On the individual <term type="ignore">level</term>, the five aggregates refer
                                 to the basis upon which the mistaken idea of a self is projected. They are referred to as the “bases for
                                 appropriation” (Skt. <foreign xml:lang="Sa-Ltn" type="term">upādāna</foreign>) insofar as all conceptual grasping
                                 arises based on these aggregates.</term>
@@ -4800,9 +4801,9 @@
                         </gloss>
                     </item>-->
                     <item>
-                        <gloss type="term" xml:id="UT22084-042-003-726">
-                            <term>levels</term>
-                            <term xml:lang="Bo-Ltn">sa </term>
+                        <gloss xml:id="UT22084-042-003-726" type="term" mode="match">
+                            <term>level</term>
+                            <term xml:lang="Bo-Ltn">sa</term>
                             <term xml:lang="bo">ས།</term>
                             <term xml:lang="Sa-Ltn">bhūmi</term>
                             <term type="definition">This refers to the bodhisattva levels leading to enlightenment.</term>
@@ -5528,14 +5529,12 @@
                         </gloss>
                     </item>-->
                     <item>
-                        <gloss type="term" xml:id="UT22084-042-003-794">
+                        <gloss xml:id="UT22084-042-003-794" type="term" mode="match">
                             <term>sense field</term>
-                            <term xml:lang="Bo-Ltn">skye mched </term>
+                            <term xml:lang="Bo-Ltn">skye mched</term>
                             <term xml:lang="bo">སྐྱེ་མཆེད།</term>
                             <term xml:lang="Sa-Ltn">āyatana</term>
-                            <term type="definition">Sometimes translated “sense bases” or “bases of cognition,” the term usually refers to the six
-                                sense faculties and their corresponding objects, i.e., the first twelve of the eighteen <foreign xml:lang="Sa-Ltn" type="term">dhātus</foreign>. Along with <foreign xml:lang="Sa-Ltn" type="term">skandha</foreign> and <foreign xml:lang="Sa-Ltn" type="term">dhātu</foreign>, one of the three major categories in the taxonomy of phenomena in
-                                the sūtra literature.</term>
+                            <term type="definition">Sometimes translated “sense bases” or “bases of cognition,” the term usually refers to the six sense faculties and their corresponding objects, i.e., the first twelve of the eighteen dhātus. Along with the skandhas and dhātus, one of the three major categories in the taxonomy of phenomena in the sūtra literature.</term>
                         </gloss>
                     </item>
                     <!--<item>
