--- a/translations/kangyur/translations/046-003_toh97-the_chapter_on_manjusris_magical_display.xml
+++ b/translations/kangyur/translations/046-003_toh97-the_chapter_on_manjusris_magical_display.xml
@@ -4,17 +4,16 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
+                                <title type="mainTitle" xml:lang="en">The Chapter on Mañjuśrī’s Magical Display</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Mañjuśrī­vikurvāṇa­parivarta</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">’jam dpal rnam par ’phrul pa’i le’u</title>
                                 <title type="mainTitle" xml:lang="bo">འཇམ་དཔལ་རྣམ་པར་འཕྲུལ་པའི་ལེའུ།</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Mañjuśrī­vikurvāṇa­parivarta</title>
-                                <title type="mainTitle" xml:lang="en">The Chapter on Mañjuśrī’s Magical Display</title>
                                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Chapter on Mañjuśrī’s Magical
                                         Display”</title>
+                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­mañjuśrī­vikurvāṇa­parivarta­nāma­mahā­yāna­sūtra</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ’jam dpal rnam par ’phrul pa’i le’u zhes bya ba theg pa chen po’i
                                         mdo</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་འཇམ་དཔལ་རྣམ་པར་འཕྲུལ་པའི་ལེའུ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­mañjuśrī­vikurvāṇa­parivarta­nāma­mahā­yāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
                                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/>
                                         under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                                 <editor role="copyEditor" ref="contributors.xml#person-252">Dion Blundell</editor>
@@ -26,9 +25,10 @@
                                 <editor role="TEImarkupEditor" ref="contributors.xml#person-95">Celso Wilkinson</editor>
                                 <editor role="finalReviewer" ref="contributors.xml#person-289">Nathaniel Rich</editor>
                                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
+                                <sponsor ref="eft:sponsor-2">May and George Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.6 <date>2022</date>
+                <edition>v 1.1.10 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -64,8 +64,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-03-02T18:31:04.572Z" user="admin">02/03/2022 18:31:04</note>
-
+                                <note type="lastUpdated" date-time="2022-11-17T18:03:18.733Z" user="admin">17/11/2022 18:03:18</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T09:35:51.142Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.e" date-time="2019-11-04T09:35:51.142Z" user="andreas">2.e</note>
@@ -89,17 +88,21 @@
                                         colophon and glossary to Bandé</note>
                                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-01-21T10:51:41.091Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                        
-    <note type="updated" update="translation-status" value="1" date-time="2021-02-04T09:43:03.498Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2021-02-04T09:43:03.498Z" user="mike">First Published Version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2021-02-12T18:38:31.216Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-02-16T18:51:27.386Z" user="john">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.1.1" date-time="2021-02-16T18:57:17.852Z" user="john">A few edits noted in Hypothesis, cross refs, added line spaces, </note>
-    <note type="updated" update="text-version" value="1.1.2" date-time="2021-02-18T00:00:39.425Z" user="john">Chinese titles, other changes to intro and notes.</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2021-02-19T03:44:40.476Z" user="mike">1.1.3</note>
-    <note type="updated" update="text-version" value="1.1.4" date-time="2021-02-19T17:46:16.342Z" user="john">Two further minor edits.</note>
-    <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-22T13:10:49.387Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>    <note type="updated" update="text-version" value="1.1.6" date-time="2022-03-02T18:31:00.388Z" user="celso">recached glossary for missing notes on distribution</note>
-            </notesStmt>
+                                <note type="updated" update="translation-status" value="1" date-time="2021-02-04T09:43:03.498Z" user="mike">1</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2021-02-04T09:43:03.498Z" user="mike">First Published Version</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2021-02-12T18:38:31.216Z" user="celso">"scholar" to "preceptor" in colophon</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2021-02-16T18:51:27.386Z" user="john">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="1.1.1" date-time="2021-02-16T18:57:17.852Z" user="john">A few edits noted in Hypothesis, cross refs, added line spaces, </note>
+                                <note type="updated" update="text-version" value="1.1.2" date-time="2021-02-18T00:00:39.425Z" user="john">Chinese titles, other changes to intro and notes.</note>
+                                <note type="updated" update="text-version" value="1.1.3" date-time="2021-02-19T03:44:40.476Z" user="mike">1.1.3</note>
+                                <note type="updated" update="text-version" value="1.1.4" date-time="2021-02-19T17:46:16.342Z" user="john">Two further minor edits.</note>
+                                <note type="updated" update="text-version" value="1.1.5" date-time="2021-04-22T13:10:49.387Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
+                                <note type="updated" update="text-version" value="1.1.6" date-time="2022-03-02T18:31:00.388Z" user="celso">recached glossary for missing notes on distribution</note>
+                                <note type="updated" update="text-version" value="1.1.7" date-time="2022-10-25T04:07:58.295Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                                <note type="updated" update="text-version" value="1.1.8" date-time="2022-10-25T04:16:52.062Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                            <note type="updated" update="text-version" value="1.1.9" date-time="2022-10-25T04:18:36.876Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                            <note type="updated" update="text-version" value="1.1.10" date-time="2022-11-17T18:03:15.92Z" user="martina-cotter">added sponsorship acknowledgement</note>
+                        </notesStmt>
                 </fileDesc>
         </teiHeader>
         <text>
@@ -122,6 +125,8 @@
                                         compared the translation with the original Tibetan and edited the text.</p>
                                 <p tid="5">The translation was completed under the patronage and supervision of 84000: Translating the Words of the
                                         Buddha.</p>
+                                <lb/>
+                                <p tid="263">The generous sponsorship of May and George Gu and family, which helped make the work on this translation possible, is most gratefully acknowledged.</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="6">Introduction</head>
