--- a/translations/tengyur/placeholders/091-001_toh3807-satasahasrikaprajnaparamitabrhattika.xml
+++ b/translations/tengyur/placeholders/091-001_toh3807-satasahasrikaprajnaparamitabrhattika.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">An Extensive Commentary on “The Perfection of Wisdom in One Hundred Thousand Lines”</title>
+                <title type="mainTitle" xml:lang="en">The Long Commentary on “The Perfection of Wisdom in One Hundred Thousand Lines”</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­bṛhaṭṭīkā</title>
                 <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་འབུམ་པ་རྒྱ་ཆེར་འགྲེལ་པ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa 'bum pa rgya cher 'grel pa/</title>
@@ -13,7 +13,7 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'bum kyi gnod 'joms/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -35,14 +35,15 @@
                 <link type="isCommentaryOf" target="toh8"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-22T10:54:14.997Z" user="admin">22/05/2022 10:54:14</note>
+                <note type="lastUpdated" date-time="2022-11-18T00:42:34.76Z" user="admin">18/11/2022 00:42:34</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3786-3823_PH_new_v2.4.xml" date-time="2021-11-02T14:12:33.078Z" user="admin"/>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-21T20:00:03.876Z" user="john">Auto (update-locations)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-21T22:38:45.274Z" user="john">Auto (update-locations)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-21T22:40:26.083Z" user="john">Titles corrected and completed</note>
-                <note type="title" date-time="2022-05-22T10:53:30.375Z" user="john">[Attributed to King khri srong lde'u btsan in the 'phang thang ma inventory]</note>
-                <note type="title" date-time="2022-05-22T10:53:30.375Z" user="john">This text is known as the “lesser ‘destroyer of harms’ commentary” despite being longer, as a text, than the “greater” one, Toh 3808.</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-05-22T10:54:11.265Z" user="john">Added public comment on titles.</note>
+                <note type="title" date-time="2022-11-18T00:42:29.266Z" user="celso">[Attributed to King khri srong lde'u btsan in the 'phang thang ma inventory]</note>
+                <note type="title" date-time="2022-11-18T00:42:29.266Z" user="celso">This text is known as the “lesser ‘destroyer of harms’ commentary” despite being longer, as a text, than the “greater” one, Toh 3808.</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-11-18T00:42:29.266Z" user="celso">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
